# QtShell

./: CMakeLists.txt  README.md
qml/: Main.qml
src/: controlflow.cpp  controlflow.h  controller.cpp  controller.h  main.cpp  shell.cpp  shell.h  varlib.cpp  varlib.h
